Add patients, physician and procedures UI